--- a/RBOT250_2020/Notes/sections/robo_confs.tex
+++ b/RBOT250_2020/Notes/sections/robo_confs.tex
@@ -211,9 +211,9 @@ This special nature of \eqref{eq:mob_cond_planar} arises because the joints' fre
 \begin{figure}[tb!]
 	\centering
 	\begin{tabular}{@{}c@{}c@{}}
-	\includegraphics[width=0.50\linewidth ,height=0.4\columnwidth]{figures/parallel_translational.png} \,\,
+	\includegraphics[width=0.50\linewidth ,height=0.4\columnwidth]{figures/parallel_translational.jpg} \,\,
 	&
-	\includegraphics[width=0.48\columnwidth,height=0.4\columnwidth]{figures/parallel_translational_workspace.png}
+	\includegraphics[width=0.48\columnwidth,height=0.4\columnwidth]{figures/parallel_translational_workspace.jpg}
 	\end{tabular}
 	\caption{\textit{Left}: A Parallel Planar Robot Mechanism. \textit{Right:} Workspace of the mechanism.}
 	\label{fig:para_mech}
