--- a/RBOT250_2020/homeworks/hwsols.tex
+++ b/RBOT250_2020/homeworks/hwsols.tex
@@ -62,8 +62,8 @@
 	
 
 \input{sec/hw1}
-%\input{sec/hw2}
-%\input{sec/hw3}
+\input{sec/hw2}
+\input{sec/hw3}
 
 % ---- Bibliography ----
 \providecommand\BIBentryALTinterwordstretchfactor{2.5}
