--- a/RBOT250_2020/Slides/sections/linkages.tex
+++ b/RBOT250_2020/Slides/sections/linkages.tex
@@ -1,7 +1,7 @@
 \section{Pairs, Linkages, and Configurations}
 
 \begin{frame}
-	\frametitle{Outline}
+	\frametitle{Lecture One Outline}
 	\begin{tcolorbox}[coltitle=white!80,colframe=blue!85,split=.2,title=Mechanism Components]
 		Kinematic geometry. Mechanisms.
 		\tcblower
@@ -23,7 +23,7 @@
 	\frametitle{Preamble.}
 	%
 	\begin{block}{Mechanics}
-		\textcolor{blue}{Mechanics} is an indirect study of nature via \textcolor{red}{bodies} --  essentially the mathematical abstractions of common natural things; the \textcolor{red}{mass} is an \textcolor{blue}{\textit{allocation}} in \textcolor{blue}{\textit{place}} to each body; \textcolor{red}{geometry}, deals with the \textcolor{red}{theory of places}.
+		\textcolor{blue}{Mechanics} is an indirect study of nature via \textcolor{red}{bodies} --  essentially the mathematical abstractions of common natural things; the \textcolor{red}{mass} is an \textcolor{blue}{\textit{allocation}} in \textcolor{blue}{\textit{place}} to each body.
 	\end{block}
 
 	\begin{block}{Geometry}
@@ -79,7 +79,7 @@
 	\end{block}
 	%
 	\begin{block}{The Rigid Body}
-		As engineers, we judge  \textcolor{blue}{kinematic rigid hardware} with the expectation that kinematic changes do not depart from rigid-body predictions.
+		As engineers and roboticists, we judge  \textcolor{blue}{kinematic rigid hardware} with the expectation that kinematic changes do not depart from rigid-body predictions.
 	\end{block}
 	%
 \end{frame}
@@ -101,7 +101,7 @@
 	\frametitle{Statics, Dynamics, Rigid Body (Motion).}
 	%		
 	\begin{block}{Rigid Body Motion}
-		At issue are components of a rigid body's \textcolor{red}{movement} w.r.t to a fixed or moving \textcolor{blue}{frame of reference}. In its most basic form, this movement is parameterized by displacement (and is sometimes time-varying e.g. for a continuum body). When solving for the movements of bodies, it is often useful to include velocities (\textcolor{red}{twists}) in order to characterize the motion.
+		At issue are components of a rigid body's \textcolor{red}{movement} w.r.t to a fixed or moving \textcolor{blue}{frame of reference}. In its most basic form, this movement is parameterized by \textcolor{red}{displacement} (and is sometimes time-varying e.g. for a continuum body). When solving for the movements of bodies, it is often useful to include velocities (\textcolor{red}{twists}) in order to characterize the \textcolor{red}{motion}.
 	\end{block}
 \end{frame}
 
@@ -122,7 +122,7 @@
 \begin{frame}
 	\frametitle{Kinematics vs. Kinetics.}
 	\begin{definition}[Truesdell]
-		That part of a system's \textcolor{blue}{dynamics} that involves its \textcolor{red}{motion} by \textcolor{cyan}{displacement} -- both linear and angular -- and \textcolor{red}{separated from motions owing to forces and  torques}, together with the successive derivatives with respect to time of all such displacements (this includes velocities, accelerations, and hyper accelerations) all form the \textcolor{red}{kinematics} of a \textcolor{light-blue}{{rigid}}, \textcolor{light-blue}{{continuum}} or \textcolor{light-blue}{{laminae}} of bodies.
+		That part of a system's \textcolor{blue}{dynamics} that involves its \textcolor{red}{motion} by \textcolor{cyan}{displacement} -- both linear and angular -- and \textcolor{red}{separated from motions owing to forces and  torques}, together with the successive derivatives with respect to time of all such displacements (this includes \textcolor{brown}{velocities, accelerations, and hyper accelerations}) all form the \textcolor{red}{kinematics} of a \textcolor{light-blue}{{rigid}}, \textcolor{light-blue}{{continuum}} or \textcolor{light-blue}{{laminae}} of bodies.
 	\end{definition}
 \end{frame}
 
@@ -146,7 +146,7 @@
 \begin{frame}
 	\frametitle{Kinematic Geometry.}
 	\begin{definition}[Kinematic Geometry]
-		The \textcolor{blue}{solid geometry of relatively moving rigid bodies} is termed the \textcolor{red}{kinematic geometry} of the rigid body. With motion, we'd have to include the successive derivatives of the displacement such as acceleration e.t.c as the `laws of motion' stipulates in mechanics.
+		The \textcolor{blue}{solid geometry of relatively moving rigid bodies} is termed the \textcolor{red}{kinematic geometry} of the rigid body. With \textcolor{light-blue}{motion}, we'd have to include the \textcolor{gray}{successive derivatives of the displacement such as acceleration} e.t.c as the `laws of motion' stipulates in mechanics.
 	\end{definition}
 \end{frame}
 
@@ -156,11 +156,11 @@
 	\frametitle{Joints and Links}
 	%
 	\begin{block}{Links}
-		Links may be rigid mechanical parts, elastic, (vulcanized) rubber components, diaphragms, conveyor belts, spring-damper systems e.t.c.
+		\textcolor{light-blue}{Links} may be \textcolor{brown}{rigid mechanical parts, elastic, (vulcanized) rubber components, diaphragms, conveyor belts, spring-damper systems} e.t.c.
 	\end{block}
 	%
 	\begin{block}{An Elementary Joint or Kinematic Pair.}
-		An \textcolor{pink}{elementary joint} or a \textcolor{light-blue}{kinematic pair} consists of touching two \textcolor{red}{links} \textcolor{light-blue}{together at one point} -- then ensuring a single contact point is \textcolor{purple}{continuously maintained} throughout \textcolor{light-blue}{relative movement}. 
+		An \textcolor{magenta}{elementary joint} or a \textcolor{light-blue}{kinematic pair} consists of touching two \textcolor{red}{links} \textcolor{light-blue}{together at one point} -- then ensuring a single contact point is \textcolor{purple}{continuously maintained} throughout \textcolor{light-blue}{relative movement}. 
 	\end{block}
 \end{frame}
 
@@ -170,23 +170,20 @@
 	\frametitle{Joint (Contact) Kinematics}
 	%
 	\begin{block}{Contact Kinematics}
-		A body may \textcolor{red}{slide} or  \textcolor{purple}{slip} across a plane or surface, or \textcolor{green}{roll} over another body. 
+		A body may \textcolor{red}{slide} or  \textcolor{purple}{slip} across a \textcolor{light-blue}{plane or surface}, or \textcolor{green}{roll} over another body. 
 	\end{block}
 	%
 	\begin{block}{Joints}
-		Joints are the result of the connecting points between two or more rigid bodies.
+		\textcolor{blue}{Joints} are the result of the \textcolor{red}{connecting points} between two or more \textcolor{pink}{rigid bodies}.
 	\end{block}
 	%
-	\begin{block}{Links}
-		Links may be rigid mechanical parts, elastic, (vulcanized) rubber components, diaphragms, conveyor belts, spring-damper systems e.t.c.
-	\end{block}
 \end{frame}
 
 \subsection{Mechanisms}
 \begin{frame}
 	\frametitle{Definition of a Mechanism}
 	\begin{definition}[Author's Definition]
-		A \textcolor{blue}{connection} of  mechanical, magnetic, electrical, hydraulic, or pneumatic components forming an \textcolor{magenta}{assemblage}, meant for moving rigid, semi-rigid or non-rigid bodies via a \textcolor{green}{controlled generation} of (sometimes constrained) \textcolor{red}{motion}.
+		A \textcolor{blue}{connection} of  \textcolor{cyan}{mechanical, magnetic, electrical, hydraulic, or pneumatic components} forming an \textcolor{magenta}{assemblage}, meant for moving \textcolor{pink}{rigid, semi-rigid or non-rigid bodies} via a \textcolor{green}{controlled generation} of (sometimes constrained) \textcolor{red}{motion}.
 	\end{definition}
 	%
 	\begin{tcolorbox}[coltitle=red!80!black,colframe=magenta!25,title=Kenneth Hunt (1978)]
@@ -228,20 +225,20 @@
 \begin{frame}
 	\frametitle{Prismatic Pairs or $P$-pairs}
 	%
-	\begin{block}{Hunt, 1978}
-		\footnotesize{Formed by receding the axis of the revolution surface between two pairs to $\infty$ so that the \textcolor{blue}{curve} that produces the surface moves parallel to itself, \textcolor{green}{tracing a cylinder}; or a \textcolor{blue}{polygonal-tracing curve} generates a \textcolor{green}{prism}.}
-	\end{block}
-	%
-	\begin{columns}[t]		
-		\begin{column}{.7\textwidth}
-			\begin{figure}
-				\centering
-				\includegraphics[width=\textwidth]{../Notes/figures/prismatic_joint.pdf}
-			\end{figure}
-		\end{column}
+	\begin{columns}[t]	
+	\begin{column}{.56\textwidth}
+		\begin{block}{Hunt, 1978}
+		{Formed by receding the axis of the revolution surface between two pairs to $\infty$ so that the \textcolor{blue}{curve} that produces the surface moves parallel to itself, \textcolor{green}{tracing a cylinder}; or a \textcolor{blue}{polygonal-tracing curve} generates a \textcolor{green}{prism}.}
+		\end{block}
+	\end{column}
+		
+	\begin{column}{.45\textwidth}
+		\begin{figure}
+			\centering
+			\includegraphics[width=\textwidth]{../Notes/figures/prismatic_joint.pdf}
+		\end{figure}
+	\end{column}
 	\end{columns}
-	%
-	%\footnotesize{\textcolor{red}{Revolute} or \textcolor{red}{Hinge} or \textcolor{red}{Turning} or simply \textcolor{red}{$R$-pairs} with and without shoulder cutaway geometries. Credit: Wikimedia commons.}
 \end{frame}
 
 \begin{frame}
@@ -381,7 +378,7 @@
 	
 	\note{The PUMA arm is the world's first serial kinematic chain. Developer: Victor Scheinman, Stanford student in the `50's. Made several iterations. Patent Rights: Joe Engelberger, (Danbury Unimation, 1961). Joe -- father of robotics -- created world's first robotics company in '61.}
 	\begin{frame}
-		\frametitle{Open Kinematic Robot Mechanisms}
+		\frametitle{Open Kinematic Lower Pairs}
 		\begin{definition}[Ken Salisbury Jr., 1982]
 			``\footnotesize \textit{[Robots are] our fascination with constructing mechanical analogues of ourselves... [this fascination] has led us to place all sorts of hopes and expectations in robot capabilities}."
 		\end{definition}
@@ -389,7 +386,7 @@
 			\begin{column}{5cm}
 				\begin{minipage}[b]{.5\textwidth}
 					\includegraphics[width=1.5\textwidth, height=1.5\textwidth]{../Notes/figures/PUMA.jpg} \\
-					\footnotesize{The St{\"a}ubli PUMA Robot (1956).} %Programmable Universal Manipulation Arm.}
+					\footnotesize{The PUMA Robot (1956).} %Programmable Universal Manipulation Arm.}
 			\end{minipage}
 			%
 		\end{column}	
@@ -534,7 +531,7 @@
 		\begin{columns}[t]
 			\begin{column}{10cm}
 				\centering
-				\includegraphics[scale=.1, width=.5\textwidth, rotate=-90]{../Notes/figures/Staubli.jpg}
+				\includegraphics[scale=.1, width=.5\textwidth, rotate=0]{../Notes/figures/Staubli.jpg}
 			\end{column}
 		\end{columns}
 		\footnotesize{The Staubli 6-DOF Arm is an example of a Spherical Manipulator. Reprinted from DirectIndustry's Webpage.}
@@ -552,9 +549,20 @@ With the 80's came the arrival of PCs. Lots of research went into computational 
 \begin{tcolorbox}[coltitle=magenta!70,colframe=blue!80!red,title=Active control schemes,toggle enlargement=forced]
 Efficient recursive Lagrangian and computational methods for the gravitational and Coriolis forces in Newton-Euler equations.
 \end{tcolorbox}
-\begin{tcolorbox}[coltitle=pink!70,colframe=gray!80!red,title=Feedback Linearization,toggle enlargement=evenpage]
-Dynamics feedback linearization for precise bounds on manipulator performance.
-\end{tcolorbox}
+\end{frame}
+
+\begin{frame}
+	\frametitle{Serial mechanisms research in the 80's}
+	%
+	\tcbset{coltitle=cyan!80,colframe=gray!80!green,title=Mechanisms in the 80's,
+		enlarge left by=-5mm,enlarge right by=0mm,width=\linewidth+5mm}
+	\begin{tcolorbox}[coltitle=pink!70,colframe=gray!80!red,title=Feedback Linearization,toggle enlargement=evenpage]
+		Dynamics feedback linearization for precise bounds on manipulator performance.
+	\end{tcolorbox}
+	
+	\begin{tcolorbox}[title=Automatix,toggle enlargement=none]
+		Reconfigurable robots for various assembly ops.
+	\end{tcolorbox}
 \end{frame}
 
 \begin{frame}
@@ -562,9 +570,6 @@ Dynamics feedback linearization for precise bounds on manipulator performance.
 %
 \tcbset{coltitle=pink!80,colframe=gray!80,title=Robotworld,
 enlarge left by=-5mm,enlarge right by=0mm,width=\linewidth+5mm}
-\begin{tcolorbox}[title=Automatix,toggle enlargement=none]
-Reconfigurable robots for various assembly ops.
-\end{tcolorbox}
 \begin{columns}[b]
 \begin{column}{.48\columnwidth}			
 \begin{tcolorbox}[colframe=blue!80!green, coltitle=white!80,toggle enlargement=none]
@@ -621,10 +626,10 @@ First industrial-scale re-configurable robot and with machine vision components.
 	\begin{frame}
 		\frametitle{Parallel Robots}
 		%
-		\tcbset{coltitle=pink!100,colframe=cyan!50,title=Robotworld,
+		\tcbset{coltitle=light-blue!100,colframe=cyan!50,title=Robotworld,
 			enlarge left by=-5mm,enlarge right by=0mm,width=\linewidth+5mm}
 		\begin{tcolorbox}[title=Mehlet 2015,toggle enlargement=none]
-			A \textcolor{blue}{parallel robot} is made up of an end-effector with n degrees of freedom, and of a fixed base, linked together by at least two independent kinematic chains. Actuation takes place through n simple actuators.
+			A \textcolor{blue}{parallel robot} is made up of an end-effector with $n$ degrees of freedom, and of a fixed base, linked together by at least two independent kinematic chains. Actuation takes place through n simple actuators.
 		\end{tcolorbox}	
 	\end{frame}
 	
