--- a/RBOT250_2020/Slides/MSRKine.tex
+++ b/RBOT250_2020/Slides/MSRKine.tex
@@ -107,6 +107,8 @@
 \include{sections/mobility}
 \lecture{Rigid Body Motions}{Lecture III}
 \include{sections/rbm}
+\lecture{Screw Theory}{Lecture IV}
+\include{sections/screw_rbm}
 
 % ---- Bibliography ----
 \bibliographystyle{../../Proposal/styles/bibtex/spmpsci_unsrt}
