--- a/RBOT250_2020/Slides/def.tex
+++ b/RBOT250_2020/Slides/def.tex
@@ -275,229 +275,21 @@
 	\end{split}
 	\end{equation}
 }
-\newcommand{\gam}{\bm{\Gamma}}
-\newcommand{\lamb}{\bm{\Lambda}}
-\newcommand{\neterror}{\bm{\varepsilon}_f}
-\newcommand{\lyap}{\textbf{V}}
-\newcommand{\lyapder}{\dot{\textbf{V}}}
-\newcommand{\processnoise}{\textbf{w}(k)}
-\newcommand{\stateT}{\textbf{y}^T}
-\newcommand{\gainx}{\subsupbold{K}{y}{}}
-\newcommand{\gainxT}{\subsupbold{K}{y}{^T}}
-\newcommand{\gainxdiff}{\tilde{\xbold{K}}_y^T}
-\newcommand{\gainxdiffo}{\tilde{\xbold{K}}_y}
-\newcommand{\gainrdiff}{\tilde{\xbold{K}}_r^T}
-\newcommand{\gainrdiffo}{\tilde{\xbold{K}}_r}
-\newcommand{\gainr}{\subsupbold{K}{r}{}}
-\newcommand{\gainrT}{\subsupbold{K}{r}{^T}}
-\newcommand{\gainxest}{\dot{\hat{\textbf{K}}}_y}
-\newcommand{\gainrest}{\dot{\hat{\textbf{K}}}_r}
-\newcommand{\errorest}{\dot{\hat{\epsilon}}_f}
-\newcommand{\gainxesto}{\hat{\textbf{K}}_y}
-\newcommand{\gainresto}{\hat{\textbf{K}}_r}
-\newcommand{\gammax}{\bm{\Gamma_y}}
-\newcommand{\gammaxT}{\bm{\Gamma_y}^T}
-\newcommand{\gammar}{\bm{\Gamma}_r}
-\newcommand{\gammarT}{\bm{\Gamma}_r^T}
-
-\newcommand{\ttbf}[1]{\textbf{\texttt{#1}}}
-\newcommand{\ttit}[1]{\texttt{#1}}
-
-
-\newcommand{\domain}[1]{\mathcal{#1}}
-
-% ICRA 2018 paper defs
-\def\nomcontrol{\bar{\textbf{u}}}
-\def\nomdist{\bar{\textbf{v}}}
-\def\control{\textbf{u}}
-\def\admcontrol{\mathcal{U}}
-\def\nomstate{\bar{\textbf{x}}}
-\def\state{\textbf{x}}
-\def\admstate{\mathcal{x}}
-\def\stateT{\textbf{x}^T}
-\def\policy{\bm{\pi}}
-\def\param{\bm{\theta}}
-\def\reward{r}
-\def\sumreward{\domain{R}}
-\def\augreward{\ell}
-\def\augsumreward{\ell}
-\def\traj{\bm{\tau}}
-\def\trajboth{\bar{\bm{\tau}}}
-\def\hinf{H_\infty}
-\def\polstoch{\bm{\pi_\param}(\control_t| \state_t)}
-\def\polstochadv{\bm{\pi_\param}(\distbo_t| \state_t)}
-\def\polstochaug{\bm{\pi_\param}(\control_t |\state_t)}
-\def\polstochaugall{\bm{\pi}_{\param i}(\control_t | \state_t)}
-\def\sensy{\bm{\gamma}}
-\def\dist{\textbf{v}}
-\def\distbo{\textbf{v}}
-\def\noise{\textbf{w}}
-\def\entropy{\domain{H}}
-\def\controlcombo{p_{uvi}}
-\def\protcontrol{p(\control_k | \state_k)}
-\def\protcontrolall{p_i(\control_k | \state_k)}
-\def\advcontrol{p(\distbo_k | \state_k)}
-\def\advcontrolall{p_i(\distbo_k | \state_k)}
-\def\jointlocalpolicy{p(\control_k | \distbo_k, \state_k)}
-\def\jointlocalpolicyall{p_i(\control_k | \distbo_k, \state_k)}
-
-
-% dynamics def ICRA18
-
-\def\hinf{H_\infty}
-\def\tidx{t}
-\def\fstate{f_{\state \tidx}}
-\def\fcontrol{f_{\control \tidx}}
-\def\fcontrolcontrol{f_{\control\control \tidx}}
-\def\fcontroldistbo{f_{\control\distbo \tidx}}
-\def\fdistbo{f_{\distbo \tidx}}
-\def\fdistbodistbo{f_{\distbo \distbo \tidx}}
-\def\fdistbostate{f_{\distbo \state \tidx}}
-\def\fcontrolstate{f_{\control \state \tidx}}
-%\def\value{V}
-\def\Vstate{V_{\state \tidx+1}}
-\def\Vstateback{V_{\state \tidx}}
-\def\Vstatestate{V_{\state \state \tidx+1}}
-\def\Vstatestateback{V_{\state \state \tidx}}
-% Q functions
-\def\Qstate{Q_{\state \tidx}}
-\def\Qcontrol{Q_{\control \tidx}}
-\def\Qdistbo{Q_{\distbo \tidx}}
-\def\Qstatestate{Q_{\state \state \tidx}}
-\def\Qstatecontrol{Q_{\state \control \tidx}}
-\def\Qcontrolstate{Q_{\control \state \tidx}}
-\def\Qcontrolcontrol{Q_{\control \control \tidx}}
-\def\Qstatecontrol{Q_{\state \control \tidx}}
-\def\Qcontrolstate{Q_{\control \state \tidx}}
-\def\Qcontrolcontrol{Q_{\control \control \tidx}}
-\def\Qcontroldistbo{Q_{\control \distbo \tidx}}
-%2nd order cross terms
-\def\Qdistbostate{Q_{\distbo \state \tidx}}
-\def\Qdistbodistbo{Q_{\distbo \distbo \tidx}}
-\def\Qstatedistbo{Q_{\state \distbo \tidx}}
-\def\Qdistbostate{Q_{\distbo \state \tidx}}
-\def\Qdistbocontrol{Q_{\distbo \control \tidx}}
-% improved Q functions
-% Q functions
-\def\TQstate{\tilde{Q}_{\state \tidx}}
-\def\TQcontrol{\tilde{Q}_{\control \tidx}}
-\def\TQdistbo{\tilde{Q}_{\distbo \tidx}}
-\def\TQstatestate{\tilde{Q}_{\state \state \tidx}}
-\def\TQstatecontrol{\tilde{Q}_{\state \control \tidx}}
-\def\TQcontrolstate{\tilde{Q}_{\control \state \tidx}}
-\def\TQcontrolcontrol{\tilde{Q}_{\control \control \tidx}}
-\def\TQstatecontrol{\tilde{Q}_{\state \control \tidx}}
-\def\TQcontrolstate{\tilde{Q}_{\control \state \tidx}}
-\def\TQcontrolcontrol{\tilde{Q}_{\control \control \tidx}}
-\def\TQcontroldistbo{\tilde{Q}_{\control \distbo \tidx}}
-%2nd order cross terms
-\def\TQdistbostate{\tilde{Q}_{\distbo \state \tidx}}
-\def\TQdistbodistbo{\tilde{Q}_{\distbo \distbo \tidx}}
-\def\TQstatedistbo{\tilde{Q}_{\state \distbo \tidx}}
-\def\TQdistbostate{\tilde{Q}_{\distbo \state \tidx}}
-\def\TQdistbocontrol{\tilde{Q}_{\distbo \control \tidx}}
-
-% Quadratized costs
-\def\cost{\mathcal{J}} % cost to go
-\def\lstate{\ell_{\state \tidx}}
-\def\lcontrol{\ell_{\control \tidx}}
-\def\ldistbo{\ell_{\distbo \tidx}}
-\def\lstatestate{\ell_{\state \state \tidx}}
-\def\lstatecontrol{\ell_{\state \control \tidx}}
-\def\lcontrolstate{\ell_{\control \state \tidx}}
-\def\lcontrolcontrol{\ell_{\control \control \tidx}}
-\def\lstatecontrol{\ell_{\state \control \tidx}}
-\def\lcontrolstate{\ell_{\control \state \tidx}}
-\def\lcontrolcontrol{\ell_{\control \control \tidx}}
-\def\lcontroldistbo{\ell_{\control \distbo \tidx}}
-%2nd order cross terms
-\def\ldistbostate{\ell_{\distbo \state \tidx}}
-\def\ldistbodistbo{\ell_{\distbo \distbo \tidx}}
-\def\lstatedistbo{\ell_{\state \distbo \tidx}}
-\def\ldistbostate{\ell_{\distbo \state \tidx}}
-\def\ldistbocontrol{\ell_{\distbo \control \tidx}}
-
-%linearized dynamics
-\def\delstate{\delta \state}
-\def\delcontrol{\delta \control}
-\def\delnoise{\delta \noise}
-\def\deldistbo{\delta \distbo}
-
-%  Q and V expanded
-\def\Kbutt{\Qcontrolcontrol^T \Qdistbodistbo - \Qcontroldistbo^T \Qcontroldistbo}
-
-%gain terms
-\def\vectorgain{\textbf{\textit{g}}}
-\def\matrixgain{\textbf{\textit{G}}}
-
-% optimal policies
-\def\optimcont{\pi_{\control}^\star}
-\def\optimdistbo{\pi_{\distbo}^\star}
-\def\udist{p_{\control_i}}
-\def\vdist{p_{\distbo_i}}
-\def\param{\bm{\theta}}
-%\def\noise{\textbf{w}_t}
-\def\blim{B_{\text{lim}}}
-\def\ball{B_{\text{tot}}}
-
-
 % RAL defs
 
 %\newcolumntype{M}[1]{>{\centering\arraybackslash}m{#1}}
 \def\coriolis{\textbf{\textit{C}}}
 \def\massinertia{\textbf{\textit{M}}}
 \def\torque{\bm{\tau}}
-\def\frictionvec{\textbf{\textit{f}}}
-\def\Smat{\textbf{\textit{S}}}
-\def\Bmat{\textbf{\textit{B}}}
-\def\wheelrad{\textbf{\textit{r}}}
-
-\def\stateweight{\textbf{\textit{w}}_x}
-\def\actionweight{\textbf{\textit{w}}_u}
-\def\advactionweight{\textbf{\textit{w}}_v}
 
 %Thesis defs
 \def\kau{\mc{K}}
-\def\particle{\textbf{x}}
-\def\deformationgrad{\textbf{F}}
-\def\refconf{\bm{\bm{\chi}}_0}
-\def\refconfbody{\mc{B}_0}
-\def\conf{\bm{\bm{\chi}}}
-\def\currconf{\bm{\chi}}
-\def\Eulerian{\mc{E}}
-\def\cauchystress{\bm{\sigma}}
-\def\stresscomp{\sigma}
-\def\currconfbody{\mc{B}}
-\def\strain{W}
-\def\materialresponse{\textbf{G}}
-\def\orthoggroup{{\textit{SO}}(3)}
-\def\liegroup{{\textit{SE}}(3)}
-\def\liealgebra{\mathfrak{se}(3)}
-\def\identity{\textbf{I}}
-\newcommand{\trace}[1]{\textbf{tr}(#1)}
-\def\leftcauchy{\textbf{B}}
-\def\rightcauchy{\textbf{C}}
-\def\fiber{\textbf{dX}}
-
-\def\dof{\text{DOF }}
-\def\dofs{\text{DOFs }}
+\def\rot{\bm{R}}
 \def\reline{\mathbb{R}}
-\def\curve{\deformationgrad}
-\def\twist{{\xi}}
-\def\contactforce{\tilde{F}}
-\def\contactforcecomp{f}
-\def\gaussianmap{\textbf{}n}
-\def\contacttorquecomp{\tau}
-\def\wrt{with respect to }
-\def\curveparam{\position}
-\def\pose{{g}}
-\def\selmap{{B}}
-\def\manipmap{{G}}
-\def\jacob{\bm{J}}
-\def\position{\textbf{r}}
-\def\deformationgradcur{\textbf{H}}
-\def\eulerianvel{\textbf{v}(\position, t)}
-\def\headparam{\zeta}
+\def\orthoggroup{SO(3)}
+\def\liegroup{{SE}}
+\def\liealg{\mathfrak{se}}
+\def\identity{\bm{I}}
 
 % inline macros
 \newcommand{\putsoro}[2]{\includegraphics[width=.45\columnwidth,height=#2\columnwidth]{../../../PhDThesis/figures/#1}}
