--- a/RBOT250_2020/Slides/sections/rbm.tex
+++ b/RBOT250_2020/Slides/sections/rbm.tex
@@ -1,32 +1,19 @@
+\section{Motions}
 \begin{frame}
 	\frametitle{Lecture III Outline}
-	\begin{tcolorbox}[coltitle=yellow!50!black,colframe=magenta!25,split=.2,title=Rigid Body Motions]
-		Screws and Rigid Body Transformations.
+	\begin{tcolorbox}[coltitle=yellow!50!black,colframe=magenta!25,split=.2,title=Lecture III Outline]
+		Rigid Body Transformations and Screws Theory.
 		\tcblower
-		Rigid body motions:Properties; Direction cosines; Rotation compositions.
+		Rigid body motions: Properties; Direction cosines; Rotation compositions; Rotation Parameterizations.
 		\vspace{.2cm}
 		\newline
-		Screws (properly revisited): Chasles' and Poinsot's theorem.
+		Rodrigues' formula; the matrix exponential, $SO(3), SO(n), \mathbb{SE}(3)$ group properties.
 		\vspace{.2cm}
 		\newline
-		Displacement and Force screws; Pl{\"u}cker coordinates; Homogeneous coordinates;
-		\vspace{.2cm}
-		\newline
-		Rodrigues' formula; the matrix exponential.
+		Transformations: Translations and rotations in $\mathbb{R}^3$, planar rotations, $SO(3), SE(3)$ motions;  homogeneous transformations; Euler and Fick angles.  
 	\end{tcolorbox}
 \end{frame}
 
-\begin{frame}
-	\frametitle{Lecture III Outline}
-	\begin{tcolorbox}[coltitle=yellow!50!black,colframe=magenta!25,split=.2,title=Rigid Body Motions]
-		Screws and Rigid Body Transformations.
-		\tcblower
-		Group theory: The Lie algebra, motions in $\mathfrak{se}(3)$;, and the Lie Group.
-		\vspace{.2cm}
-		\newline
-		Transformations: Translations and rotations in $\mathbb{R}^3$, planar rotations, $SO(3), SE(3)$ motions;  homogeneous transformations; Euler and Fick angles; Brockett's exponential map formula. Paden-Kahan subproblems.
-	\end{tcolorbox}
-\end{frame}
 
 \begin{frame}
 	\frametitle{Rigid Body Motions}
@@ -44,320 +31,9 @@
 	\end{block}
 \end{frame}
 
-\begin{frame}
-	\frametitle{Rigid Body Motions as Screws}
-	%
-	\begin{block}{Rigid Body Motion as a Screw Motion}
-		The motion of a \textcolor{red}{rigid body} is precisely the same as if it were attached to  the \textcolor{red}{nut of a literal mechanical screw}. Associated with the screw is its pitch.
-	\end{block}	
-	%
-	\begin{definition}[Screw]
-		That straight line with which a \textcolor{red}{definite linear magnitude} termed the pitch is associated is called the \textcolor{red}{screw}.
-	\end{definition}
-\end{frame}
 
 
-\begin{frame}
-	\frametitle{Screw as a Geometric Quantity}	
-	%	
-	\begin{block}{Pitch of a Screw}
-		\textcolor{brown}{The rectilinear distance}  through which (a literal nut)  \textcolor{red}{nut is translated parallel to the axis of a screw}, while the nut is rotated through the \textcolor{cyan}{angular unit of circular measure} is termed the \textcolor{light-blue}{pitch}.
-	\end{block}
-	%
-	\begin{block}{Pl{\"u}cker Coordinates}
-		Let \textcolor{red}{$\bm{a}$} be a point on line $\bm{\ell}_0$. Let \textcolor{red}{$\bm{a}$}'s direction cosine vector (to be introduced shortly) be \textcolor{red}{$\bm{b}$}. Then, its binormal (moment) vector is \textcolor{red}{$\bm{c=a\times b}$}. We say the pair \textcolor{red}{$(\bm{b},\bm{c})$} is the \textcolor{blue}{Pl{\"u}cker Coordinates} of point  \textcolor{red}{$\bm{a}$ on axis} $\bm{\ell}_0$.
-	\end{block}	
-\end{frame}
-
-\begin{frame}
-	\frametitle{Screw in Pl{\"u}cker Coordinates}
-	%
-	\begin{columns}[b]
-		\begin{column}{.67\columnwidth}
-			\centering
-			\begin{definition}[Screw Coordinates]
-				Six-vector, $\bm{s}$, related to the Pl{\"u}cker coordinates, parameterize a screw i.e. $\bm{s}=\left(s_1, s_2, s_3, s_4, s_5, s_6\right)$.
-			\end{definition}
-		\end{column}
-		
-		\begin{column}{.3\columnwidth}
-			\centering
-			\includegraphics[width=\textwidth]{figures/plucker_coords.jpg}
-		\end{column}
-		\label{fig:plucker}
-	\end{columns}
-\end{frame}
-
-
-\subsection{Displacement \& Twist}
-\begin{frame}
-	\frametitle{Screws and Pl{\"u}cker Coordinates}
-	%
-	\begin{block}{Screw axis and Pl{\"u}cker Coordinates}
-		\begin{align}
-			b_1 &= s_1, \quad b_2 = s_2, \quad b_3 = s_3; \\
-			c_1 &= s_4 - p \cdot s_1, \quad c_2 = s_5-p\cdot s_2, \quad c_3 = s_6 - p\cdot s_3.
-		\end{align}
-	\end{block}
-	%
-	\begin{block}{Pitch in Pl{\"u}cker Coordinates}
-		\begin{align}
-			p &= \dfrac{s_1 \, s_4 + s_2 \, s_5 + s_3 \, s_6}{{s_1^2 + s_2^2 + s_3^2}}, \\
-			\mid s \mid &= \sqrt{s_1^2 + s_2^2 + s_3^2} \quad \text{if } p \neq \infty, \\
-			\mid s \mid &= \sqrt{s_4^2 + s_5^2 + s_6^2} \quad \text{if } p = \infty
-		\end{align}
-	\end{block}
-\end{frame}
-
-
-\begin{frame}
-	\frametitle{Pitch and Magnitude of the screw}	
-	\begin{block}{Pl{\"u}cker Coordinates' Direction Cosines}
-		Suppose that 
-		%\begin{align}
-		$h = \sqrt{b_1^2+b_2^2+b_3^2}$.
-		%\end{align}
-		Then $(\bm{b}/h, \bm{c}/h)$ are respectively the direction cosines of the line, $l_0$ and its moment.
-	\end{block}
-	%
-	\begin{block}{ Homogeneous Coordinates!}
-		\textcolor{blue}{Pl{\"u}cker Coordinates} give six unit parameters of a point on a line. Pl{\"u}cker Coordinates are in \textcolor{red}{homogeneous coordinates}!
-	\end{block}
-\end{frame}
-
-\begin{frame}
-	\frametitle{Twist About a Screw (Axis)}
-		%
-		\begin{block}{Twist}
-			A body's \textcolor{purple}{twist} about 
-			s \textcolor{magenta}{screw} is a \textcolor{red}{uniform (infinitesimal) rotation} about the screw \textcolor{blue}{followed by a uniform (infinitesimal) translation} about an \textcolor{cyan}{axis parallel to the screw}, through \textcolor{magenta}{a distance that is the product of the pitch and the circular measure of rotation}.
-		\end{block}	
-		%
-		\begin{block}{Twist}
-			A \textcolor{purple}{twist} requires six 
-			s \textcolor{magenta}{algebraic quantities} for its  \textcolor{red}{complete specification}:  \textcolor{blue}{five ($\{t_i\}_{i=1}^5$) specify the screw}, the \textcolor{cyan}{sixth (or its amplitude)} specifies the \textcolor{light-blue}{screw's rotaty angle}, $t_6$.
-		\end{block}	
-\end{frame}
-
-\begin{frame}
-	\frametitle{Twist in Pl{\"u}cker Coordinates}
-	%
-			\begin{definition}[Twist Coordinates]
-				A six-vector, $\bm{t}$, related to the Pl{\"u}cker coordinates  parameterize a twist vector i.e. $\bm{t}=\left[(t_1, t_2, t_3), (t_4, t_5, t_6)\right]$ or $\bm{t}=\left(\bm{\omega}, \bm{v}\right)$, where $\bm{\omega}=(t_1, t_2, t_3)$ and $\bm{v}=(t_4, t_5, t_6)$.
-			\end{definition}
-	%
-	\begin{block}{Pl{\"u}cker Coordinates of a Twist}
-		\begin{align}
-			b_1 &= t_1, \quad b_2 = t_2, \quad b_3 = t_3 \\
-			c_1 &= t_4 - p \cdot s_1, \quad c_2 = t_5-p\cdot s_2, \quad c_3 = t_6 - p\cdot s_3.
-		\end{align}
-	%
-\end{block}
-\end{frame}
-
-\begin{frame}
-	\frametitle{Twists in Pl{\"u}cker Coordinates}
-	%
-	\begin{block}{Pitch of the Twist}
-		$p_t = \dfrac{t_1\,t_4 + t_2 \, t_5 + t_3\,t_6}{t_1^2+t_2^2+t_3^2}=\dfrac{\bm{\omega}\cdot \bm{v}}{\bm{\omega}\cdot \bm{\omega}}$.
-	\end{block}
-	%
-	\begin{block}{Pitch of the Twist}
-		Expressed as a ratio of the \textcolor{magenta}{magnitude of the velocity of a point on the twist axis} to the \textcolor{green}{magnitude of the angular velocity} about the twist axis. 
-	\end{block}	
-	%
-	\begin{block}{Translation Distance}
-		$d_t = t_6 \times p_t$.  The sign expresses the rotation's direction.
-	\end{block}	
-\end{frame}
-
-
-\begin{frame}
-	\frametitle{Twists and Fixed Movements}
-	\begin{block}{Pure Rotation}
-		Let pitch be \textcolor{light-blue}{zero}. That which results is but \textcolor{red}{pure rotation}.
-	\end{block}
-	
-	\begin{block}{Pure Translation}
-		Let pitch be \textcolor{magenta}{infinite}. That which results \textcolor{red}{cannot be a finite twist}, \textcolor{cyan}{except the amplitude be zero}, whereupon the \textcolor{brown}{twist becomes a pure translation parallel to the screw}.
-	\end{block}
-\end{frame}
-
-%
-\begin{frame}
-	\frametitle{Curvilinear Displacement: Serret-Frenet Frame}
-	\begin{columns}[]
-		\begin{column}{.5\linewidth}
-			\centering
-			\includegraphics[width=\textwidth]{figures/multi_sec_manip.jpg}
-		\end{column}
-		\begin{column}{.68\linewidth}
-			\centering
-			\includegraphics[width=\textwidth]{figures/serret.jpg}
-		\end{column}
-	\end{columns}
-	\footnotesize{Elephant Trunk Multi-sectional Continuum Model (left), and its Representation in the Serret-Frenet Frame.}
-\end{frame}
-\begin{frame}
-	\frametitle{Pl{\"u}cker Coordinates Example}
-	\begin{block}{Chasles' Theorem Applied to The Serret-Frenet Frame}
-		Consider a spatial curve $\bm{S}$ on the elephant continuum trunk shown earlier. Suppose $\bm{S}$ is parameterized by its arc length $\bm{s} \in [0, 1]$. 
-		For a point $\bm{x}=\left[x, y, z\right]^T$ on $\bm{S}$, the unit tangent vector at $s$ is $\bm{t}(s)=\bm{dx}/\bm{ds}$.
-	\end{block}
-	%	
-	\begin{block}{Differential Kinematics and The Serret-Frenet Frame}
-		 Denote by $\bm{n}$ the principal normal to $\bm{S}$ at $\bm{n}$; then we must have $\bm{b}=\bm{t}\times \bm{n}$ as the binormal. We say $(\bm{b},\bm{n})$ is the Pl{\"u}cker coordinate of the tangent $\bm{t}$.
-	\end{block}
-\end{frame}
-
-\subsection{Force \& Wrench}
-\begin{frame}
-	\frametitle{Force}
-	%	
-	\begin{block}{Force}
-		Net \textcolor{blue}{force} exerted on a body, 
-		$\textcolor{red}{\bm{F}} = (f_x, f_y, f_z)$.
-	\end{block}
-	\begin{block}{Couple of Force}
-		Suppose that $\bm{F}$ acts along a corkscrew axis. The resulting motion when $\bm{F}$ makes an infinitesimal rotation about its screw axis  is called its \textcolor{red}{couple}, $\mathfrak{C} = (c_x, c_y, c_z)$.
-	\end{block}
-	%	
-\end{frame}
-
-\begin{frame}
-	\frametitle{Complete Wrench on a Screw}
-	%	
-	\begin{block}{Wrench}		
-		A \textcolor{purple}{wrench} requires six 
-		s \textcolor{magenta}{algebraic quantities} for its  \textcolor{red}{complete specification}:  \textcolor{blue}{five ($\{w_i\}_{i=1}^5$) specify the screw}, the \textcolor{cyan}{sixth (or its intensity)}, $w_6$, specifies the \textcolor{light-blue}{force's magnitude}.
-	\end{block}
-	%		
-	\begin{block}{Couple's Moment}		
-		The moment of the \textcolor{purple}{couple} is the product of the \textcolor{magenta}{intensity of the wrench} and the \textcolor{red}{ and the screw's pitch} i.e. $\alpha(\mathfrak{C}) = w_6 \times p_w$.
-	\end{block}
-	%	
-\end{frame}
-
-\begin{frame}
-	\frametitle{Wrench on a Screw}
-	%	
-	\begin{block}{Wrench}
-		Simple Definition: A \textcolor{brown}{force} and a \textcolor{cyan}{couple} both acting in a plane perpendicular to the force.
-	\end{block}
-	%
-	\begin{definition}[Complete Definition]		
-		The \textcolor{brown}{resultant canonical system of forces} acting on a rigid body, \textcolor{light-blue}{reduced to a resultant force on a point}, and acting along the \textcolor{red}{resultant couple} that is \textcolor{cyan}{perpendicular to the plane} in which the force acts is called \textcolor{blue}{the wrench}.
-	\end{definition}
-	%	
-\end{frame}
-
-\begin{frame}
-	\frametitle{Wrench in Pl{\"u}cker Coordinates}
-	%
-	\begin{definition}[Wrench Coordinates]
-		A six-vector, $\bm{w}$, related to the Pl{\"u}cker coordinates  parameterize a wrench vector i.e. $\bm{w}=\left[(w_1, w_2, w_3), (w_4, w_5, w_6)\right]$ or $\bm{w}=\left(\bm{f}, \bm{m}\right)$, where $\bm{f}=(w_1, w_2, w_3)$ and $\bm{m}=(w_4, w_5, w_6)$.
-	\end{definition}
-	%
-	\begin{block}{Pl{\"u}cker Coordinates of a Wrench}
-		\begin{align}
-			b_1 &= w_1, \quad b_2 = w_2, \quad b_3 = w_3 \\
-			c_1 &= w_4 - p \cdot s_1, \quad c_2 = w_5-p\cdot s_2, \quad c_3 = t_6 - p\cdot w_3.
-		\end{align}
-		%
-	\end{block}
-\end{frame}
-
-\begin{frame}
-	\frametitle{Wrench in Pl{\"u}cker Coordinates}
-	%
-	\begin{block}{Pitch of the Wrench}
-		$p_t = \dfrac{w_1\,w_4 + w_2 \, w_5 + w_3\,w_6}{w_1^2+w_2^2+w_3^2}=\dfrac{\bm{f}\cdot \bm{m}}{\bm{f}\cdot \bm{f}}$.
-	\end{block}
-	%
-	\begin{block}{Pitch of the Wrench}
-		Expressed as a ratio of the \textcolor{magenta}{moment applied about a point on the axis} to the \textcolor{light-blue}{magnitude of the force applied}  along the wrench axis. 
-	\end{block}	
-	%
-	\begin{block}{Wrench's Magnitude}
-		$\|f\| = \sqrt{w_1^2 + w_2^2 + w_3^2}$ if $p_w = 0$ else $\|m\| = \sqrt{w_4^2 + w_5^2 + w_6^2}$ if $p_w = \infty$.
-	\end{block}	
-\end{frame}
-
-\begin{frame}
-	\frametitle{Wrenches and Fixed Movements}
-%	\begin{block}{Pitch of a Wrench, $p_w$}
-%		Acts along a (corkscrew) axis,  $p_w\bm{F}=\mathfrak{C}$.
-%	\end{block}
-	%
-	\begin{block}{Pure Force}
-		Let pitch be \textcolor{light-blue}{zero}. That which results is \textcolor{red}{pure force} along its screw axis.
-	\end{block}
-	
-	\begin{block}{Pure Couple}
-		Let pitch be \textcolor{magenta}{infinite}. That which results \textcolor{red}{cannot be a finite wrench}, \textcolor{cyan}{except the intensity be zero}, whereupon the \textcolor{brown}{wrench becomes a pure couple in a plane that is perpendicular to the screw}.
-	\end{block}
-\end{frame}
-
-
-\begin{frame}
-	\frametitle{Statics and Instantaneous Kinematics}
-	%
-	\begin{block}{Statics and kinematics}
-		\begin{center}
-			\begin{tabular}{||c | c||} 
-				\hline
-				\textbf{Statics} & \textbf{Instantaneous Kinematics}  \\ %[0.5ex] 
-				\hline\hline
-				Force,  $\bm{F}$ about $n$. & Infinitesimal rotation, $\bm{\omega}$ \\ 
-				\hline
-				Couple, $\mathfrak{C}$: [$\bm{F}$] $\times$ [$\ell$] & Infinitesimal translation, $\bm{t}$ \\
-				\hline
-				$p_w = \pm \mathfrak{C}/\bm{F}$ & Pitch of a Wrench, $\bm{w}$ \\
-				\hline
-				$\mid\bm{F} \mid$ & Intensity of Wrench \\
-				\hline
-			\end{tabular}
-			\text{Dyname}: $(\bm{F}, \mathfrak{C})$. Credits: Pl{\"u}cker (1866), Routh (1892).
-		\end{center}
-	\end{block}
-	
-\end{frame}
-
-\subsection{Screws in Pl{\"u}cker Coordinates}
-\begin{frame}
-	\frametitle{Pl{\"u}cker Coordinates Kinetics Quiz}
-	%
-	\begin{block}{Poinsot's Theorem Quiz on a  Force and its Moment}
-		Suppose that a force $\bm{F}$  acts at the point $\bm{a}$ in the image of Frame \ref{fig:plucker}. What are the Pl{\"u}cker coordinates of the \textcolor{red}{line of force}?
-	\end{block}
-\end{frame}
-
-\note{
-	\begin{frame}
-		%
-		\begin{block}{Poinsot's Theorem Quiz on a  Force and its Moment}
-			Imagine that a force $\bm{F}$ is acting at the point $\bm{a}$ in the image of Frame \ref{fig:plucker}. Suppose that $\bm{\tau}$ is torque acting along the normal to point $\bm{a}$.  Then $(\bm{f,\tau})$ are the Pl{\"u}cker  coordinates of the \textcolor{red}{line of force}.
-		\end{block}
-		%
-		\begin{block}{Arithmetics on Screws}
-			Scalar and vector arithmetic operations are valid on infinitesimal  screws e.g.
-			\begin{align}
-				c_1 \bm{s}_1 + c_2 \bm{s}_2 = 0 \text{ for } c_1, \, c_2 \neq 0 \text{ on screws } \bm{s}_1, \bm{s}_2.
-			\end{align}
-		\end{block}
-	\end{frame}
-}
-
-\subsection{$\mathbb{R}^3$ Motions}
-
-\begin{frame}
-	\frametitle{Pl{\"u}cker Coordinates Kinetics Quiz}
-	%
-	\begin{block}{Poinsot's Theorem Quiz on a  Force and its Moment}
-		Suppose that a force $\bm{F}$  acts at the point $\bm{a}$ in the image of Frame \ref{fig:plucker}. What are the Pl{\"u}cker coordinates of the \textcolor{red}{line of force}?
-	\end{block}
-\end{frame}
-
+\subsection{Movement in $\mathbb{R}^3$}
 \begin{frame}
 	\frametitle{Rigid Body Transformations}
 	%
@@ -595,20 +271,121 @@
 		\footnotesize{Projection of $y_1$ on $x_0$ is negative because of our adopted right-handed frame.}
 \end{frame}
 
+%\begin{frame}
+%	\frametitle{Composition of Rotations About A Current Axis}
+%	\begin{block}{Skew Symmetry Operations}
+%		%
+%		What happens when the \textcolor{red}{order of multiplication is reversed}?
+%	\end{block}
+%	
+%%	\begin{block}{Skew Symmetry}
+%%		%
+%%		Turns out \textcolor{light-blue}{going from rotations about a current frame} to a \textcolor{blue}{fixed axis} and \textcolor{brown}{rotations from a fixed axis} to a \textcolor{light-red}{current frame} is equivalent to \textcolor{purple}{skew-symmetric operations on matrices} i.e. 
+%%		\begin{align}
+%%			\bm{R}_{x, \theta} \bm{R}_{z, \psi}  =  \left(\bm{R}_{z, \psi} \bm{R}_{x, \theta}\right)^\wedge
+%%		\end{align}
+%%	\end{block}
+%\end{frame} 
+
+\begin{frame}
+	\frametitle{Axis-Angle Parameterization}
+	\begin{block}{Exponential Rotation Coordinates}
+		It can be verified that 
+		\begin{align}
+			e^{ \tilde{\omega} \theta} = \identity + \tilde{\omega} \sin \theta + \tilde{\omega}^2 (1 - \cos \theta),
+		\end{align}
+		 $ \tilde{\omega} \in so(3) \text{ and }so(n) = \{\tilde{\omega}: \tilde{\omega}\in \reline^n \times \reline^n \mid \tilde{\omega}^T = -\tilde{\omega}^T\}$.
+	\end{block}
+\end{frame}
+
+\begin{frame}
+	\frametitle{Axis-Angle Parameterization}
+	\begin{block}{Parameterization from Exponentiation of Axial Rotation}
+		It can be verified that 
+		\begin{align}
+			e^{ \tilde{\omega} \theta} = \begin{bmatrix}
+				\omega_x^2 v_\theta + c_\theta  & \omega_x\omega_y v_\theta - \omega_z s_\theta & \omega_x \omega_z v_\theta + \omega_y \, s_\theta \\
+				%
+				\omega_x \omega_y v_\theta + \omega_z s_\theta  & \omega_y^2 v_\theta+ c_\theta & \omega_y \omega_z v_\theta - \omega_x s_\theta \\
+				%
+				\omega_x \omega_z v_\theta - \omega_y s_\theta  & \omega_y \omega_z v_\theta + \omega_x s_\theta & \omega_z^2 v_\theta + c_\theta
+			\end{bmatrix} \nonumber
+		\end{align}
+		 where $ v_\theta = 1 - \cos \theta$, $-2\pi n \le \theta \le 2\pi n$.
+	\end{block}
+		\begin{block}{Angle from Exponentiation of Axial Rotation}
+		%
+		\begin{align}
+			%\text{Trace}(\rot) &= r_{11}  + r_{22}  + r_{33} \implies
+			 \theta = \cos^{-1}\dfrac{\text{Trace}(\rot)-1}{2}
+			 \label{eq:angle_param}
+		\end{align}
+	\end{block}
+\end{frame}
+
+\begin{frame}
+	\frametitle{Axis-Angle Parameterization}
+	\begin{block}{Axis from Exponentiation of Axial Rotation}
+		Equating the off-diagonal terms, we find that
+		%
+		\begin{align}
+			\omega = \frac{1}{2 \sin \theta} \left(
+			\begin{array}{c}
+				r_{32} - r_{23} \\
+				%
+				r_{13} - r_{31} \\
+				%
+				r_{21} - r_{12}
+			\end{array} \right)
+			\label{eq:axis_param}
+		\end{align}
+		%
+		 Suppose $\theta \neq 0$, equations \eqref{eq:angle_param} together with \eqref{eq:axis_param} are  the \textcolor{brown}{axis-angle representation}.
+	\end{block}
+\end{frame}
+
+
+\begin{frame}
+	\frametitle{The Skew Symmetrix Matrix}
+	\begin{block}{Skew Symmetric Matrix}
+		For a \textcolor{brown}{rigid body whose rotation is locally parameterized} by $\rot$ (with $\rot: \rot \rot^T = \identity$) followed by a translation, $\bm{d}$. Compose this transformation as
+		%
+		%\begin{align}
+		$g = \left(\begin{array}{ccc}
+			\rot & \identity \\
+			0 & 1
+		\end{array}\right) \in \liegroup(3)$.
+		%\end{align}
+	\end{block}
+	
+	\begin{block}{Skew Symmetric Matrix}
+		%
+		There exists a \textcolor{brown}{skew symmetric matrix}, $\tilde{\omega}$, for an axis $\omega = [\omega_x, \omega_y, \omega_z]^T$ about which \textcolor{red}{the rotary and translatory} movement occurs such that
+		\begin{align}
+			\tilde{\omega} = \left(\begin{array}{ccc}
+				0 & -\omega_z & \omega_y \\
+				\omega_z & 0 & -\omega_x \\
+				-\omega_y & \omega_x & 0 
+			\end{array}\right) = - \tilde{\omega}^T
+		\end{align}
+		%Observe $s_{ij} = -s_{ji}$ for $i\neq j$ and $s_ii=0$
+	\end{block}
+\end{frame}
+
 \subsection{Composition of Rotations}
 \begin{frame}
 	\frametitle{Composition of Rotations}
-			\begin{block}{Rotations Composition}
-				Let the \textcolor{cyan}{relative orientation} of a frame $K$  to a frame $J$ be $\bm{R}_{jk}$, and let frame $J$'s  \textcolor{cyan}{relative orientation} to frame $I$ be $\bm{R}_{ij}$, then the \textcolor{cyan}{relative orientation} of frame $K$  w.r.t $I$ is 
-				%
-				\begin{align}
-					\bm{R}_{ik} = \bm{R}_{ij} \cdot \bm{R}_{jk}.
-				\end{align} 
-			\end{block}
-		
-		\begin{block}{Rotations Composition}
-			Equivalent to \textcolor{brown}{rotating $J$ relative to frame $I$ according to $\bm{R}_{ij}$}; then \textcolor{magenta}{aligning frame $J$  to $K$}, we \textcolor{light-blue}{rotate $K$ relative to $I$ according to $\bm{R}_{jk}$}. This frame relative to which rotation occurs is termed the \textcolor{light-red}{current frame}. 
-		\end{block}
+	\begin{block}{Rotations Composition}
+		Let the \textcolor{cyan}{relative orientation} of a frame $K$  to a frame $J$ be $\bm{R}_{jk}$, and let frame $J$'s  \textcolor{cyan}{relative orientation} to frame $I$ be $\bm{R}_{ij}$, then the \textcolor{cyan}{relative orientation} of frame $K$  w.r.t $I$ is 
+		%
+		\begin{align}
+			\bm{R}_{ik} = \bm{R}_{ij} \cdot \bm{R}_{jk}.
+		\end{align} 
+	\end{block}
+	
+	\begin{block}{Rotations Composition}
+		Equivalent to \textcolor{brown}{rotating $J$ relative to frame $I$ according to $\bm{R}_{ij}$}; then \textcolor{magenta}{aligning frame $J$  to $K$}, we \textcolor{light-blue}{rotate $K$ relative to $I$ according to $\bm{R}_{jk}$}. This frame relative to which rotation occurs is termed the \textcolor{light-red}{current frame}. 
+	\end{block}
 \end{frame}
 
 
@@ -653,53 +430,24 @@
 \end{frame} 
 
 \begin{frame}
-	\frametitle{Composition of Rotations About A Current Axis}
-	\begin{block}{Skew Symmetry Operations}
+	\frametitle{Composition of Rotations}
+	\begin{block}{Skew matrices and SO(3)}
 		%
-		What happens when the \textcolor{red}{order of multiplication is reversed}?
+		\begin{lemma}[Murray, Li, and Sastry, 1994]
+			The exponential of a skew-matrix $\tilde{\omega}$ that parameterizes a rotation $\theta$ about an axis, $\omega$, is in SO(3) \ie 
+			$e^{\tilde{\omega}\theta} \in SO(3)$.
+		\end{lemma}
+		%
+	\end{block}
+	\begin{block}{Pre-multiplication of Rotations}
+		%
+		A \textcolor{cyan}{rotation} about \textcolor{brown}{a fixed axis} requires a \textcolor{light-blue}{pre-multiplication}.
 	\end{block}
 	
-%	\begin{block}{Skew Symmetry}
-%		%
-%		Turns out \textcolor{light-blue}{going from rotations about a current frame} to a \textcolor{blue}{fixed axis} and \textcolor{brown}{rotations from a fixed axis} to a \textcolor{light-red}{current frame} is equivalent to \textcolor{purple}{skew-symmetric operations on matrices} i.e. 
-%		\begin{align}
-%			\bm{R}_{x, \theta} \bm{R}_{z, \psi}  =  \left(\bm{R}_{z, \psi} \bm{R}_{x, \theta}\right)^\wedge
-%		\end{align}
-%	\end{block}
-\end{frame} 
-
-
-\begin{frame}
-	\frametitle{Composition of Rotations}
-	\begin{block}{Skew Symmetric Matrix}
+	\begin{block}{Post-multiplication of Rotations}
 		%
-		\begin{align}
-			(S)^\wedge = \left(\begin{array}{ccc}
-				0 & -s_z & s_y \\
-				s_z & 0 & -s_x \\
-				-s_y & s_x & 0 
-			\end{array}\right)
-		\end{align}
+		A \textcolor{cyan}{rotation} about \textcolor{brown}{a current axis} necessitates a \textcolor{light-blue}{post-multiplication}.
 	\end{block}
-
-\begin{block}{Skew Symmetric Matrix}
-%
-Observe $s_{ij} = -s_{ji}$ for $i\neq j$ and $s_ii=0$
-\end{block}
-\end{frame}
-
-
-\begin{frame}
-	\frametitle{Composition of Rotations}
-			\begin{block}{Pre-multiplication of Rotations}
-				%
-				A \textcolor{cyan}{rotation} about \textcolor{brown}{a fixed axis} requires a \textcolor{light-blue}{pre-multiplication}.
-			\end{block}
-		
-		\begin{block}{Post-multiplication of Rotations}
-			%
-			A \textcolor{cyan}{rotation} about \textcolor{brown}{a current axis} necessitates a \textcolor{light-blue}{post-multiplication}.
-		\end{block}
 \end{frame}
 
 
@@ -722,7 +470,10 @@ Observe $s_{ij} = -s_{ji}$ for $i\neq j$ and $s_ii=0$
 
 
 \begin{frame}
-	\frametitle{Euler Angles as Parameterization of Rotations}
+	\frametitle{Local Parameterization of Rotations in SO(3)}
+	\begin{theorem}[Euler]
+		Any rotation in $SO(3)$ can be represented as a rotation about a fixed axis $\omega\in \reline^3$ through an angle $\theta \in [0, 2\pi)$.
+	\end{theorem}
 	\begin{columns}[]
 		\begin{column}{.95\linewidth}
 			\centering
@@ -732,75 +483,186 @@ Observe $s_{ij} = -s_{ji}$ for $i\neq j$ and $s_ii=0$
 	\end{columns}
 \end{frame}
 
+
 \begin{frame}
-	\frametitle{Euler Angles as Parameterization of Rotations}
-			\begin{block}{Euler ($ZYZ$) Angles}
-				\begin{align}
-					\bm{R}_{ij}(\alpha, \beta, \gamma) &= \bm{R}_z(\alpha) \bm{R}_y(\beta) \bm{R}_z(\gamma) \\
-					%
-					& = \begin{bmatrix}
-						c_\alpha & -s_\alpha & 0 \\
-						%
-						s_\alpha & c_\alpha & 0 \\
-						%
-						0 & 0 & 1
-					\end{bmatrix}
-					%
-					\begin{bmatrix}
-						c_\theta  & 0 & s_\theta\\
-						%
-						0  & 1 & 0 \\
-						%
-						-s_\theta  & 0 & c_\theta 
-					\end{bmatrix} \nonumber \\
-					%
-					&= \begin{bmatrix}
-						c_\alpha c_\beta c_\gamma - s_\alpha s_\gamma & -c_\alpha c_\beta s_\gamma - s_\alpha c_\gamma & c_\alpha s_\beta \\
-						%
-						s_\alpha c_\beta c_\gamma + c_\alpha s_\gamma & -s_\alpha c_\beta s_\gamma + c_\alpha c_\gamma  & s_\alpha s_\beta \\
-						%
-						-s_\beta c_\gamma & s_\beta s_\gamma & c_\beta
-					\end{bmatrix} 
-					\label{eq:zyz}
-				\end{align} 
-			\end{block}
+	\frametitle{Local Parameterizations of SO(3)}
+	\begin{block}{Rotation About Principal $\bm{x}$ Axis}
+		\begin{align}
+			\bm{R}_{\bm{x}}(\theta) = e^{\tilde{\bm{x}}\theta} 
+			%
+			= \begin{bmatrix}
+				1 & 0 & 0 \\
+				0 & \cos\theta & -\sin\theta \\
+				%
+				0 & \sin\theta & \cos\theta  
+			\end{bmatrix}
+		\end{align}
+	\end{block}
+	
+	\begin{block}{Rotation About Principal $\bm{y}$ Axis}
+		\begin{align}
+			\bm{R}_{\bm{y}}(\phi) = e^{\tilde{\bm{y}}\phi} 
+			%
+			= \begin{bmatrix}
+				-\cos\phi & 0 & -\sin\phi \\
+				%
+				0 & 1 & 0 \\
+				-\sin \phi  & 0 & \cos \phi 
+			\end{bmatrix}
+		\end{align}
+	\end{block}
+\end{frame}
+
+
+\begin{frame}
+	\frametitle{Local Parameterizations of SO(3)}	
+	\begin{block}{Rotation About Principal $\bm{z}$ Axis}
+		\begin{align}
+			\bm{R}_{\bm{z}}(\psi) = e^{\bm{\tilde{z}}\psi} 
+			%
+			= \begin{bmatrix}
+				\cos\psi & -\sin\psi & 0\\
+				%
+				\sin \psi  & \cos \psi & 0 \\
+				%
+				0 & 0 & 1 
+			\end{bmatrix}
+		\end{align}
+	\end{block}
 \end{frame}
 
 \begin{frame}
 	\frametitle{Euler Angles as Parameterization of Rotations}
-	\begin{block}{Euler ($ZYZ$) Angles. Case $\sin(\beta)>0$}
-	\begin{subequations}
+	``\textcolor{red}{\textit{Read Euler, read Euler, he is the master of us all}.}" -- Pierre-Simon Laplace.
+	\begin{block}{Euler ($ZYZ$) Angles}
 		\begin{align}
-			\beta &= \arctan 2(r_{33}, \sqrt{1 - r_{33}^2})  \label{eq:euler_a}\\
-			\alpha &= \arctan 2(r_{23}/\sin \beta, r_{13}/\sin \beta) \label{eq:euler_b} \\
-			\gamma &= \arctan 2 (r_{32}/\sin \beta, -r_{31}/\sin \beta)
-		\end{align}
-		\label{eq:euler}
-	\end{subequations}
-	%
-	\footnotesize{where $\arctan2(y, x)$ determines the quadrant of the angle based on the sign of $x$ and $y$}.
+			\bm{R}_{ij}(\alpha, \beta, \gamma) &= \bm{R}_z(\alpha) \bm{R}_y(\beta) \bm{R}_z(\gamma) \\
+			%
+			& = \begin{bmatrix}
+				c_\alpha & -s_\alpha & 0 \\
+				%
+				s_\alpha & c_\alpha & 0 \\
+				%
+				0 & 0 & 1
+			\end{bmatrix}
+			%
+			\begin{bmatrix}
+				c_\theta  & 0 & s_\theta\\
+				%
+				0  & 1 & 0 \\
+				%
+				-s_\theta  & 0 & c_\theta 
+			\end{bmatrix} \nonumber \\
+			%
+			&= \begin{bmatrix}
+				c_\alpha c_\beta c_\gamma - s_\alpha s_\gamma & -c_\alpha c_\beta s_\gamma - s_\alpha c_\gamma & c_\alpha s_\beta \\
+				%
+				s_\alpha c_\beta c_\gamma + c_\alpha s_\gamma & -s_\alpha c_\beta s_\gamma + c_\alpha c_\gamma  & s_\alpha s_\beta \\
+				%
+				-s_\beta c_\gamma & s_\beta s_\gamma & c_\beta
+			\end{bmatrix} 
+			\label{eq:zyz}
+		\end{align} 
+	\end{block}
+\end{frame}
+
+\begin{frame}
+	\frametitle{Euler Angles as Parameterization of Rotations}
+	``\textcolor{red}{\textit{The study of Euler's works will remain the best school for the different fields of mathematics, and nothing else can replace it}}." -- Carl Friedrich Gauss.
+	\begin{block}{Euler ($ZYZ$) Angles. Case $\sin(\beta)>0$}
+		Given an $R$ and $\sin(\beta)>0$, the Euler angles are:
+		\begin{subequations}
+			\begin{align}
+				\beta &= \arctan 2(r_{33}, \sqrt{1 - r_{33}^2})  \label{eq:euler_a}\\
+				\alpha &= \arctan 2(r_{23}/\sin \beta, r_{13}/\sin \beta) \label{eq:euler_b} \\
+				\gamma &= \arctan 2 (r_{32}/\sin \beta, -r_{31}/\sin \beta)
+			\end{align}
+			\label{eq:euler}
+		\end{subequations}
+		%
+		%\footnotesize{where $\arctan2(y, x)$ determines the quadrant of the angle based on the sign of $x$ and $y$}.
 	\end{block}
 \end{frame}
 
 \begin{frame}
 	\frametitle{Euler Angles as Parameterization of Rotations}
 	\begin{block}{Euler ($ZYZ$) Angles. Case $\sin(\beta)<0$}
-	\begin{subequations}
-		\begin{align}
-			\beta &=  \arctan2(r_{33}, -\sqrt{1 - r_{33}^2})  \label{eq:euler_neg_a}\\
-			\alpha &= \arctan 2(-r_{23}/\sin \beta, -r_{13}/\sin \beta) \label{eq:euler_neg_b} \\
-			\gamma &= \arctan 2 (-r_{32}/\sin \beta, r_{31}/\sin \beta)
-		\end{align}
-		\label{eq:euler_neg}
-	\end{subequations}
+		Given an $R$ and $\sin(\beta)<0$, the Euler angles are:
+		\begin{subequations}
+			\begin{align}
+				\beta &=  \arctan2(r_{33}, -\sqrt{1 - r_{33}^2})  \label{eq:euler_neg_a}\\
+				\alpha &= \arctan 2(-r_{23}/\sin \beta, -r_{13}/\sin \beta) \label{eq:euler_neg_b} \\
+				\gamma &= \arctan 2 (-r_{32}/\sin \beta, r_{31}/\sin \beta)
+			\end{align}
+			\label{eq:euler_neg}
+		\end{subequations}
 		%
 		\footnotesize{\textcolor{red}{Euler angles are not unique} owing to the sign of the angle about which the $y$ axis rotates!}
 	\end{block}
 \end{frame}
 
+\begin{frame}
+	\frametitle{Euler Angles Drawbacks}
+	\begin{block}{Drawbacks}
+		\begin{description}
+			\item Lack of \textcolor{red}{smooth, global solutions} to Euler angles from rotation;
+			\item \textcolor{purple}{Singularities} at $\rot = \identity$;
+			\item \textcolor{magenta}{Possible infinite representation of Euler angles at specific configurations} e.g. $\rot(\theta, 0, -\theta)=\identity$.
+		\end{description}
+	\end{block}
+\end{frame}
+
 
 \begin{frame}
-	\frametitle{Other Axes Parameterization of Rotations}
+	\frametitle{Yaw, Pitch, and Roll Axes}
+	\begin{columns}[]
+		\begin{column}{.45\linewidth}
+			\begin{block}{Fick angles}
+				Otherwise called the \textcolor{magenta}{yaw, pitch, and roll angles}. $\bm{R}_{ij}$ found by \textcolor{gray}{rotating about the $x-$axis}  (roll), then  a \textcolor{cyan}{rotation about the $y-$axis (pitch)}, and finally a rotation about \textcolor{brown}{$z-$axis} -- all in the body frame. 
+			\end{block}
+		\end{column}
+		\begin{column}{.55\linewidth}
+			\centering
+			\includegraphics[width=\textwidth]{figures/yawpitchroll.jpg}
+			\footnotesize{Aircraft Principal Axes in the right-hand frame. Courtesy of Wikimedia commons.}
+		\end{column}
+	\end{columns}
+\end{frame}
+
+
+\begin{frame}
+	\frametitle{Quaternions}
+	\begin{block}{Global Parameterization of Rotations}
+		  Instead of \textcolor{magenta}{locally parameterizing the $SO(3)$ group}, \textcolor{blue}{quaternions}, unlike rotation matrices, \textcolor{brown}{globally parameterize the \textit{SO(3)} Lie Group}.
+	\end{block}
+	
+	\begin{block}{Quaternions}
+		Formally, we represent a \textcolor{blue}{quaternion} as follows:
+		%
+		\begin{align}
+			Q = q_0 + q_x \bm{i} + q_y \bm{j} + q_z \bm{k},
+		\end{align}
+		%
+		where $q_0 \in \bb{R}$ is the scalar component of $Q$ and $\bm{q} = (q_x, q_y, q_z) \in \bb{R}^3$ is the vector component.
+	\end{block}
+\end{frame}
+
+\begin{frame}
+	\frametitle{Quaternions}
+	\begin{block}{Quaternions}
+		%
+		The \textcolor{magenta}{unit quaternions} are the \textcolor{cyan}{subset of all $Q \in \bb{Q}$ such that $\|Q\| = 1$}. For a rotation matrix $R = \text{exp}(\hat{\omega}\theta)$, we have the unit \textcolor{blue}{quaternion} as 
+		%
+		\begin{align}
+			Q = \left(\cos(\theta/2), \omega \sin \left(\theta/2\right) \right),
+		\end{align}
+		%
+		where $\omega \in \bb{R}^3$ is the \textcolor{brown}{axis of orientation} and $\theta \in \bb{R}$ is the \textcolor{brown}{angle of rotation}.
+	\end{block}
+\end{frame}
+
+\begin{frame}
+	\frametitle{Other Parameterization of Rotations}
 	\begin{block}{Fick ($ZYX$), Helmholtz ($YZX$) Angles.}
 		 We could \textcolor{red}{permute the order of rotation} such as rotating successively about \textcolor{cyan}{different axes}. Examples include \textcolor{blue}{successive rotations about $ZYX$ axes for the Fick angles} and \textcolor{brown}{successive rotations about $YZX$ axes for Helmholtz angles}.
 	\end{block}
@@ -812,22 +674,7 @@ Observe $s_{ij} = -s_{ji}$ for $i\neq j$ and $s_ii=0$
 
 
 \begin{frame}
-	\frametitle{Fick angles and Yaw, Pitch, and Roll Axes}
-	\begin{columns}[]
-		\begin{column}{.45\linewidth}
-			\begin{block}{Fick angles}
-				Otherwise called the yaw, pitch, and roll angles. $\bm{R}_{ij}$ found by rotating about the $x-$axis  (roll), then the $y-$axis (pitch), and finally the $z-$axis -- all in the body frame. 
-			\end{block}
-		\end{column}
-		\begin{column}{.55\linewidth}
-			\centering
-			\includegraphics[width=\textwidth]{figures/yawpitchroll.jpg}
-			\footnotesize{Aircraft Principal Axes in the right-hand frame. Courtesy of Wikimedia commons.}
-		\end{column}
-	\end{columns}
-\end{frame}
-
-\begin{frame}
+	\frametitle{Summary of Parameterization of Rotations}
 	\begin{tcolorbox}[title=Summary of Parameterizations]
 		Rotation matrices can be parameterized in one of many ways depending on our use case. The common examples of parameterizations are 
 		%
